<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bincontrol.binstore.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/small_margin_size"
        android:layout_marginRight="@dimen/small_margin_size"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_margin_size"
            android:onClick="login"
            android:text="@string/login" />

        <Button
            android:id="@+id/btn_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin_size"
            android:onClick="logout"
            android:text="@string/logout" />

        <Button
            android:id="@+id/btn_trade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin_size"
            android:onClick="trade"
            android:text="@string/trade" />

        <Button
            android:id="@+id/btn_mine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin_size"
            android:onClick="orderAndCart"
            android:text="@string/mine" />

        <Button
            android:id="@+id/btn_webview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin_size"
            android:onClick="webview"
            android:text="@string/webview" />
    </LinearLayout>
</RelativeLayout>
